anitmated toggle button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             aria-controls="sidebar"
             aria-label="Open navigation menu"
         >
-            &#9776;
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
         </button>
 
         <!-- Sidebar -->
