whit sidebar darkened overlay

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <script src="/app.js" defer></script>
     </head>
     <body>
+
+        <!-- Overlay will be darkened when sidebar is open -->
+        <div id="overlay"></div>
+
         <!-- Toggle button -->
         <button
             id="sidebar-toggle-btn"
